from register endpoint to search endpoint
